# biocurator_mapper

./: .dockerignore  .gitignore  CLAUDE.md  DO_PARSER_ANALYSIS.md  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  embeddings_config.yaml  ontology_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_tests.py  start-local.sh  streamlit_app.py
.github/workflows/: docker.yml  test.yml
app/: config.py  config_updater.py  do_embeddings.py  go_parser.py  llm_matcher.py  main.py  models.py  ontology_manager.py  ontology_searcher.py  ontology_version_manager.py  openai_client.py
scripts/: prd.txt
tests/: README.md  test_config.py  test_data_fixtures.py  test_do_cross_reference_extraction.py  test_do_embeddings.py  test_do_ontology_manager_integration.py  test_do_parser_core_functionality.py  test_do_synonym_type_parsing.py  test_doid_parsing.py  test_embeddings_config.py  test_embeddings_generation.py  test_go_data_parsing.py  test_main.py  test_models.py  test_ontology_manager_do_extraction.py  test_openai_client.py  test_openai_integration.py  test_openai_integration_comprehensive.py  test_streamlit_app.py  test_streamlit_integration.py  test_version_management_integration.py  test_yaml_config_integration.py
tests/data/: TEST_DATA_DOCUMENTATION.md  sample_do_comprehensive.json  sample_do_edge_cases.json  sample_do_invalid.json  sample_do_malformed.json  sample_do_performance.json
tests/e2e/: README_DO_TESTS.md  conftest.py  test_complete_do_workflow.py  test_do_basic_e2e.py  test_do_embeddings.py  test_do_playwright_verified.py  test_do_term_extraction_e2e.py  test_download_final.py  test_ontology_download.py
